fix-style-alignment

--- a/src/scss/2-base/_global.scss
+++ b/src/scss/2-base/_global.scss
@@ -23,7 +23,7 @@ li{
 .main-content{
   align-items: center;
   &>section{
-    margin-bottom:1.2em;
+    margin-bottom:3em;
   }
   @include breakpoint('desktop'){
     margin-left:$navbarWidth;
