--- a/src/scss/3-modules/_nav.scss
+++ b/src/scss/3-modules/_nav.scss
@@ -10,7 +10,7 @@
   position: fixed;
   z-index:10;
   top:0;
-  left:-250px;
+  left:-$navbarWidth;
   height: 100%;
   width:$navbarWidth;
   transition:left .3s ease-in;
@@ -56,7 +56,7 @@
 }
 .nav-slider{
   height: 55px;
-  width:230px;
+  width:$navSliderWidth;
   background-color:white;
   border-top-left-radius: 50px;
   border-bottom-left-radius: 50px;
